# Franzininho-wifi-exemplos-esp-idf

./: .gitignore  404.html  README.md  index.html  search.html  sitemap.xml
0x01-Hello-world/: index.html
0x02-entrada-digital/: index.html
0x03-entrada-analogica/: index.html
about/: index.html
doc/: mkdocs.yml
doc/docs/: 0x01-Hello-world.md  0x02-entrada-digital.md  0x03-entrada-analogica.md  index.md
doc/site/: 404.html  index.html  search.html  sitemap.xml
exemplos/Button/: CMakeLists.txt
exemplos/Deep_Mode/: CMakeLists.txt
exemplos/ESP_NOW/: .gitignore  CMakeLists.txt  sdkconfig
exemplos/EntradaAnalogica/: CMakeLists.txt  sdkconfig
exemplos/Hello_World/: CMakeLists.txt  README.md
exemplos/Light_Mode/: CMakeLists.txt
exemplos/MQTT/proj_wifi_mqtt/main/: CMakeLists.txt  Kconfig  main.c  prio_tasks.h  stacks_sizes.h
exemplos/MQTT/proj_wifi_mqtt/main/modulo_leds/: modulo_leds.c  modulo_leds.h
exemplos/MQTT/proj_wifi_mqtt/main/modulo_mqtt/: modulo_mqtt.c  modulo_mqtt.h
exemplos/MQTT/proj_wifi_mqtt/main/modulo_principal/: modulo_principal.c  modulo_principal.h
exemplos/MQTT/proj_wifi_mqtt/main/wifi_st/: wifi_st.c  wifi_st.h
exemplos/MQTT_TagoIO/: CMakeLists.txt
exemplos/NVS/: CMakeLists.txt
exemplos/PWM_LEDC/: CMakeLists.txt  sdkconfig.old
exemplos/RTC-Franzininho/: CMakeLists.txt  sdkconfig
exemplos/Relay-component/: CMakeLists.txt  README.md
exemplos/SPIFFS/: CMakeLists.txt
exemplos/WiFi-Acess-Point/: CMakeLists.txt
exemplos/WiFi-Scanner/: CMakeLists.txt
exemplos/entrada_digital/: index.html
search/: search_index.json
(+61 files in other folders)
