idf_component_register(SRCS "main.c"
                            "wifi_st/wifi_st.c"
                            "modulo_mqtt/modulo_mqtt.c"
                            "modulo_principal/modulo_principal.c"
                            "modulo_leds/modulo_leds.c"
                    INCLUDE_DIRS "")
